<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#F0EFF5"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/drop_shadow"
        android:elevation="5dp"
        >
        <ImageView
            android:background="@drawable/________1_"
            android:layout_marginTop="25dp"
            android:layout_height="120dp"
            android:layout_width="120dp"
            />
        <TextView
            android:id="@+id/name_namespace"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/we_dont_know_who_you_are"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/number_namespace"
            android:textSize="16sp"
            android:text="@string/fill_to_register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <EditText
                android:textColor="#737373"
                android:id="@+id/name_to_register"
                android:textStyle="normal"
                android:hint="@string/name_hint"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>
            <EditText
                android:textColor="#737373"
                android:textStyle="normal"
                android:id="@+id/phone_to_register"
                android:hint="@string/phone_hint"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <Button
                android:id="@+id/sign_in_button"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:text="@string/enter"
                android:textStyle="bold"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_width="88dp"
                android:textColor="#FFF"
                android:background="#FF444F"
                />

        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/register_salon"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:layout_width="200dp"
            android:textColor="#FFF"
            android:layout_marginBottom="12dp"
            android:background="#FF444F"
            android:id="@+id/register_button"
            />
    </LinearLayout>

</LinearLayout>