<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:background="#e5e5e5"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/image_downloader"
                android:background="#EDEDED"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="150dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/salon_backgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/picture" />

                <TextView
                    android:id="@+id/click_to_download"
                    android:textColor="#BDBDBD"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/click_to_download_images">

                </TextView>
            </LinearLayout>
            <com.synnapps.carouselview.CarouselView
                android:visibility="gone"
                android:id="@+id/register_salon_carousel"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:fillColor="#FFF"
                app:pageColor="#ACACAC"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#ACACAC"
                app:strokeWidth="1dp" />

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText

                    android:textColor="#444444"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/register_salon_name"
                    android:layout_width="wrap_content"
                    android:maxWidth="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_salon_name"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:textColor="#8A8A8A"
                    android:id="@+id/register_salon_type"
                    android:layout_width="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/barbershop"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/geolocation_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/ic_location_on_black_24dp" />

                <EditText
                    android:textColor="#8A8A8A"
                    android:id="@+id/registration_salon_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:hint="@string/enter_an_adress"
                    android:maxWidth="200dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/instagram_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/instagram" />

                <EditText
                    android:textColor="#8A8A8A"
                    android:id="@+id/register_instagram_account"
                    android:layout_width="wrap_content"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/your_intagram" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/phone_call" />

                <EditText
                    android:textColor="#8A8A8A"
                    android:textSize="15sp"
                    android:id="@+id/register_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:maxWidth="200dp" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/select_services"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            />

        <GridLayout
            android:columnCount="2"
            android:layout_height="wrap_content"
            android:layout_width="375dp"
            android:gravity="center_horizontal"
            android:elevation="5dp"
            android:background="#FFF"
            tools:targetApi="lollipop"
            android:paddingBottom="20dp"
            android:layout_marginBottom="15dp"
            >

            <TextView
                android:id="@+id/hair_list"
                android:layout_width="193dp"
                android:layout_height="40dp"
                android:layout_gravity="center|fill"
                android:gravity="center"
                android:text="@string/haircuts"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/nail_list"
                android:layout_width="208dp"
                android:layout_height="40dp"
                android:layout_gravity="center|fill"
                android:gravity="center"
                android:text="@string/manicure"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/massage_list"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="40dp"
                    android:text="@string/massage"
                    android:layout_width="wrap_content"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/depil_list"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="40dp"
                    android:text="@string/depilation"
                    android:layout_width="wrap_content"
                    tools:targetApi="lollipop" />

        </GridLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:background="#FFF"
            android:padding="10dp"
            android:elevation="5dp"
            >
            <TextView
                android:gravity="center_horizontal"
                android:text="@string/attention"
                android:layout_height="wrap_content"
                android:layout_width="300dp"

                android:layout_marginBottom="10dp"
                />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="250dp">
                    <EditText
                        android:id="@+id/regsal_login"
                        android:textSize="14sp"
                        android:textColor="#AFAFAF"
                        android:drawableLeft="@drawable/avatar"
                        android:drawablePadding="5dp"
                        android:hint="@string/enter_login"
                        android:padding="5dp"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/regsal_password"
                        android:textColor="#AFAFAF"
                        android:drawableLeft="@drawable/lock"
                        android:textSize="14sp"
                        android:hint="@string/password"
                        android:drawablePadding="5dp"
                        android:padding="5dp"
                        android:inputType="textPassword"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:inputType="textPassword"
                        android:id="@+id/regsal_confirm_password"
                        android:textColor="#AFAFAF"
                        android:hint="@string/cinfirm_pass"
                        android:textSize="14sp"
                        android:drawableLeft="@drawable/lock"
                        android:drawablePadding="5dp"
                        android:backgroundTint="@android:color/transparent"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/regpage_register_button"
            android:textSize="12sp"
            android:text="@string/register_register_button"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:textColor="#FFF"
            android:background="#FF444F"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>

</ScrollView>
